--- a/index.html
+++ b/index.html
@@ -10,9 +10,35 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header class="header section"></header>
+    <header class="header section">
+      <div class="container header__container">
+        <ul class="header__navbar">
+          <li class="m-rs"><a href="#">Packages</a></li>
+          <li class="m-lrs"><a href="#">Themes</a></li>
+          <li class="m-lrs"><a href="#">Documentation</a></li>
+          <li class="m-lrs"><a href="#">Blog</a></li>
+          <li class="m-lrs"><a href="#">Discuss</a></li>
+        </ul>
+        <div class="header__sign-in">
+          <a href="#"
+            ><img class="m-lrs" src="/images/sign-in.png" alt="sign in" /> Sign
+            in</a
+          >
+        </div>
+      </div>
+    </header>
     <!-- HERO -->
-    <section class="hero section"></section>
+    <section class="hero section">
+      <div class="container hero__container">
+        <div class="hero__header">
+          <div class="hero__logos">
+            <div class="atom-blue"></div>
+            <div class="atom-logo"></div>
+            <div class="atom-circle"></div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- MAIN -->
     <section class="main section"></section>
     <!-- CONTACT -->
