--- a/index.html
+++ b/index.html
@@ -13,32 +13,75 @@
     <header class="header section">
       <div class="container header__container">
         <ul class="header__navbar">
-          <li class="m-rs"><a href="#">Packages</a></li>
-          <li class="m-lrs"><a href="#">Themes</a></li>
-          <li class="m-lrs"><a href="#">Documentation</a></li>
-          <li class="m-lrs"><a href="#">Blog</a></li>
-          <li class="m-lrs"><a href="#">Discuss</a></li>
+          <li class="mr-1"><a href="#">Packages</a></li>
+          <li class="mx-1"><a href="#">Themes</a></li>
+          <li class="mx-1"><a href="#">Documentation</a></li>
+          <li class="mx-1"><a href="#">Blog</a></li>
+          <li class="mx-1"><a href="#">Discuss</a></li>
         </ul>
         <div class="header__sign-in">
           <a href="#"
-            ><img class="m-lrs" src="/images/sign-in.png" alt="sign in" /> Sign
+            ><img class="mx-1" src="/images/sign-in.png" alt="sign in" /> Sign
             in</a
           >
         </div>
       </div>
     </header>
+
     <!-- HERO -->
     <section class="hero section">
-      <div class="container hero__container">
+      <div class="container container-grid hero__container">
         <div class="hero__header">
-          <div class="hero__logos">
-            <div class="atom-blue"></div>
-            <div class="atom-logo"></div>
-            <div class="atom-circle"></div>
+          <img src="/images/logo.png" alt="logo" class="logo" />
+          <div class="atom-circles">
+            <img src="/images/atom-circles/atom-1.svg" alt="atom-1" />
+            <img src="/images/atom-circles/atom-2.svg" alt="atom-2" />
+            <img src="/images/atom-circles/atom-3.svg" alt="atom-3" />
+            <img src="/images/atom-circles/atom-4.svg" alt="atom-4" />
+            <img src="/images/atom-circles/atom-5.svg" alt="atom-5" />
+            <img src="/images/atom-circles/atom-6.svg" alt="atom-6" />
+            <img src="/images/atom-circles/atom-7.svg" alt="atom-7" />
+            <img src="/images/atom-circles/atom-8.svg" alt="atom-8" />
+            <img src="/images/atom-circles/atom-9.svg" alt="atom-9" />
+            <img src="/images/atom-circles/atom-10.svg" alt="atom-10" />
           </div>
+          <div class="atom-blue">
+            <img src="/images/atom-blue.svg" alt="atom blue" />
+          </div>
+        </div>
+        <div class="hero__main">
+          <ul>
+            <li class="px-2 py-3"><img src="/images/atom.svg" alt="atom" /></li>
+            <li class="hero__note hero__note--release p-2">
+              <h3>1.56.0</h3>
+              <a href="#" class="mt-1">Release notes</a>
+            </li>
+            <li class="hero__note p-2">
+              <h3>macOS</h3>
+              <p>For macOS 10.10 or later</p>
+            </li>
+            <li class="download p-2">
+              <a class="p-3" href="#"
+                ><img class="mr-1" src="/images/download.png" alt="download" />
+                DownLoad</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="hero__footer">
+          <p class="mt-3">
+            By downloading, you agree to the
+            <a href="#">Terms and Conditions</a>
+          </p>
+          <ul class="mt-3">
+            <li><a href="#">Other platform</a></li>
+            <li><a href="#">Try Atom Beta</a></li>
+            <li><a href="#">Try Atom Nightly</a></li>
+          </ul>
         </div>
       </div>
     </section>
+
     <!-- MAIN -->
     <section class="main section"></section>
     <!-- CONTACT -->
