--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- HERO -->
     <section class="hero section">
       <div class="container container-grid hero__container">
-        <div class="hero__header">
+        <div class="hero__header mt-l-sec">
           <img src="/images/logo.png" alt="logo" class="logo" />
           <div class="atom-circles">
             <img src="/images/atom-circles/atom-1.svg" alt="atom-1" />
@@ -49,7 +49,7 @@
             <img src="/images/atom-blue.svg" alt="atom blue" />
           </div>
         </div>
-        <div class="hero__main">
+        <div class="hero__main mt-s-sec">
           <ul class="hero__version">
             <li class="px-2 py-3"><img src="/images/atom.svg" alt="atom" /></li>
             <li class="hero__note hero__note--release p-2">
@@ -81,14 +81,13 @@
         </div>
       </div>
     </section>
-
     <!-- MAIN -->
     <section class="main section">
       <div class="container container-grid main__container">
-        <div class="main__header">
+        <div class="main__header mt-l-sec">
           <h1>A hackable <span>text editor</span> for the 21st Century</h1>
         </div>
-        <div class="main__content main__content--left">
+        <div class="main__content main__content--left my-l-sec">
           <img src="/images/rainbow.svg" alt="rainbow" class="rainbow" />
 
           <h2 class="main__title">Teletype for Atom</h2>
@@ -114,7 +113,7 @@
             <a href="#" class="btn btn-primary">Learn more</a>
           </div>
         </div>
-        <div class="main__content main__content--right">
+        <div class="main__content main__content--right my-l-sec">
           <img
             src="/images/atom-orange.svg"
             alt="orange atom"
