Implemnt main feature

--- a/index.html
+++ b/index.html
@@ -83,10 +83,11 @@
     </section>
     <!-- MAIN -->
     <section class="main section">
-      <div class="container container-grid main__container">
+      <div class="container main__container">
         <div class="main__header mt-l-sec">
           <h1>A hackable <span>text editor</span> for the 21st Century</h1>
         </div>
+
         <div class="main__content main__content--left my-l-sec">
           <img src="/images/rainbow.svg" alt="rainbow" class="rainbow" />
 
@@ -113,6 +114,7 @@
             <a href="#" class="btn btn-primary">Learn more</a>
           </div>
         </div>
+
         <div class="main__content main__content--right my-l-sec">
           <img
             src="/images/atom-orange.svg"
@@ -142,6 +144,165 @@
           <div class="main__button">
             <a href="#" class="btn btn-secondary">Learn more</a>
           </div>
+        </div>
+
+        <div class="main__feature">
+          <h2>Everyting you would expect</h2>
+          <ul class="main__lists mt-s-sec">
+            <li>
+              <div class="main__icon p-1">
+                <img
+                  src="/images/features/cross-platform.png"
+                  alt="cross platform"
+                />
+              </div>
+              <div class="main__explanation pl-3 pt-1">
+                <h4>Cross-platform editing</h4>
+                <p class="mt-2">
+                  Atom works across operating systems. Use it on OS X, Windows,
+                  or Linux.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="main__icon p-1">
+                <img
+                  src="/images/features/build-in.png"
+                  alt="Built-in package manager"
+                />
+              </div>
+              <div class="main__explanation pl-3 pt-1">
+                <h4>Built-in package manager</h4>
+                <p class="mt-2">
+                  Search for and install new packages or create your own right
+                  from Atom.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="main__icon p-1">
+                <img
+                  src="/images/features/smart.png"
+                  alt="Smart autocompletion"
+                />
+              </div>
+              <div class="main__explanation pl-3 pt-1">
+                <h4>Smart autocompletion</h4>
+                <p class="mt-2">
+                  Atom helps you write code faster with a smart and flexible
+                  autocomplete.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="main__icon p-1">
+                <img
+                  src="/images/features/file-system.png"
+                  alt="File system browser"
+                />
+              </div>
+              <div class="main__explanation pl-3 pt-1">
+                <h4>File system browser</h4>
+                <p class="mt-2">
+                  Easily browse and open a single file, a whole project, or
+                  multiple projects in one window.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="main__icon p-1">
+                <img src="/images/features/multiple.png" alt="Multiple panes" />
+              </div>
+              <div class="main__explanation pl-3 pt-1">
+                <h4>Multiple panes</h4>
+                <p class="mt-2">
+                  Split your Atom interface into multiple panes to compare and
+                  edit code across files.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="main__icon p-1">
+                <img src="/images/features/find.png" alt="Find and replace" />
+              </div>
+              <div class="main__explanation pl-3 pt-1">
+                <h4>Find and replace</h4>
+                <p class="mt-2">
+                  Find, preview, and replace text as you type in a file or
+                  across all your projects.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <div class="main__feature mt-s-sec mb-m-sec">
+          <h2>Make it your editor</h2>
+          <ul class="main__lists mt-s-sec">
+            <li>
+              <div class="main__icon p-1">
+                <img src="/images/features/build-in.png" alt="Packages" />
+              </div>
+              <div class="main__explanation pl-3 pt-1">
+                <h4>Packages</h4>
+                <p class="mt-2">
+                  Choose from thousands of
+                  <a href="#">open source packages</a> that add new features and
+                  functionality to Atom, or build a package from scratch and
+                  publish it for everyone else to use.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="main__icon p-1">
+                <img src="/images/features/theme.png" alt="Themes" />
+              </div>
+              <div class="main__explanation pl-3 pt-1">
+                <h4>Themes</h4>
+                <p class="mt-2">
+                  Atom comes pre-installed with four UI and eight syntax
+                  <a href="#">themes</a>
+                  in both dark and light colors. Can't find what you're looking
+                  for? Install themes created by the Atom community or create
+                  your own.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="main__icon p-1">
+                <img
+                  src="/images/features/customization.png"
+                  alt="Customization"
+                />
+              </div>
+              <div class="main__explanation pl-3 pt-1">
+                <h4>Customization</h4>
+                <p class="mt-2">
+                  It's easy to customize and style Atom. Tweak the look and feel
+                  of your UI with CSS/Less, and add major features with HTML and
+                  JavaScript.
+                </p>
+                <a class="mt-3" href="#">See how to set up Atom</a>
+              </div>
+            </li>
+            <li>
+              <div class="main__icon p-1">
+                <img
+                  src="/images/features/under-the-hood.png"
+                  alt="Under the hood"
+                />
+              </div>
+              <div class="main__explanation pl-3 pt-1">
+                <h4>Under the hood</h4>
+                <p class="mt-2">
+                  Atom is a desktop application built with HTML, JavaScript,
+                  CSS, and Node.js integration. It runs on
+                  <a href="#">Electron</a>, a framework for building cross
+                  platform apps using web technologies.
+                </p>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
