--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
           </div>
           <p class="main__second-paragraph">
             Share your workspace and edit code together in real time. To start
-            collaborating, <a href="#">open Teletype in Atom</a> and install the
+            collaborating,
+            <a class="link" href="#">open Teletype in Atom</a> and install the
             package.
           </p>
           <div class="main__button">
@@ -158,7 +159,7 @@
               </div>
               <div class="main__explanation pl-3 pt-1">
                 <h4>Cross-platform editing</h4>
-                <p class="mt-2">
+                <p class="mt-1">
                   Atom works across operating systems. Use it on OS X, Windows,
                   or Linux.
                 </p>
@@ -173,7 +174,7 @@
               </div>
               <div class="main__explanation pl-3 pt-1">
                 <h4>Built-in package manager</h4>
-                <p class="mt-2">
+                <p class="mt-1">
                   Search for and install new packages or create your own right
                   from Atom.
                 </p>
@@ -188,7 +189,7 @@
               </div>
               <div class="main__explanation pl-3 pt-1">
                 <h4>Smart autocompletion</h4>
-                <p class="mt-2">
+                <p class="mt-1">
                   Atom helps you write code faster with a smart and flexible
                   autocomplete.
                 </p>
@@ -203,7 +204,7 @@
               </div>
               <div class="main__explanation pl-3 pt-1">
                 <h4>File system browser</h4>
-                <p class="mt-2">
+                <p class="mt-1">
                   Easily browse and open a single file, a whole project, or
                   multiple projects in one window.
                 </p>
@@ -215,7 +216,7 @@
               </div>
               <div class="main__explanation pl-3 pt-1">
                 <h4>Multiple panes</h4>
-                <p class="mt-2">
+                <p class="mt-1">
                   Split your Atom interface into multiple panes to compare and
                   edit code across files.
                 </p>
@@ -227,7 +228,7 @@
               </div>
               <div class="main__explanation pl-3 pt-1">
                 <h4>Find and replace</h4>
-                <p class="mt-2">
+                <p class="mt-1">
                   Find, preview, and replace text as you type in a file or
                   across all your projects.
                 </p>
@@ -245,11 +246,11 @@
               </div>
               <div class="main__explanation pl-3 pt-1">
                 <h4>Packages</h4>
-                <p class="mt-2">
+                <p class="mt-1">
                   Choose from thousands of
-                  <a href="#">open source packages</a> that add new features and
-                  functionality to Atom, or build a package from scratch and
-                  publish it for everyone else to use.
+                  <a class="link" href="#">open source packages</a> that add new
+                  features and functionality to Atom, or build a package from
+                  scratch and publish it for everyone else to use.
                 </p>
               </div>
             </li>
@@ -259,9 +260,9 @@
               </div>
               <div class="main__explanation pl-3 pt-1">
                 <h4>Themes</h4>
-                <p class="mt-2">
+                <p class="mt-1">
                   Atom comes pre-installed with four UI and eight syntax
-                  <a href="#">themes</a>
+                  <a class="link" href="#">themes</a>
                   in both dark and light colors. Can't find what you're looking
                   for? Install themes created by the Atom community or create
                   your own.
@@ -277,12 +278,12 @@
               </div>
               <div class="main__explanation pl-3 pt-1">
                 <h4>Customization</h4>
-                <p class="mt-2">
+                <p class="mt-1">
                   It's easy to customize and style Atom. Tweak the look and feel
                   of your UI with CSS/Less, and add major features with HTML and
                   JavaScript.
                 </p>
-                <a class="mt-3" href="#">See how to set up Atom</a>
+                <a class="link mt-3" href="#">See how to set up Atom</a>
               </div>
             </li>
             <li>
@@ -294,11 +295,11 @@
               </div>
               <div class="main__explanation pl-3 pt-1">
                 <h4>Under the hood</h4>
-                <p class="mt-2">
+                <p class="mt-1">
                   Atom is a desktop application built with HTML, JavaScript,
                   CSS, and Node.js integration. It runs on
-                  <a href="#">Electron</a>, a framework for building cross
-                  platform apps using web technologies.
+                  <a class="link" href="#">Electron</a>, a framework for
+                  building cross platform apps using web technologies.
                 </p>
               </div>
             </li>
@@ -307,7 +308,50 @@
       </div>
     </section>
     <!-- CONTACT -->
-    <section class="contact section"></section>
+    <section class="contact section">
+      <div class="container contact__container">
+        <div class="contact__github mt-l-sec">
+          <h2>Open source</h2>
+          <p class="mt-s-sec">
+            Atom is open source. Be part of the Atom community or help improve
+            your favorite text editor.
+          </p>
+          <div class="contact__button mt-s-sec">
+            <a href="#" class="btn btn-primary">Fork on Github</a>
+          </div>
+        </div>
+        <div class="contact__sns my-s-sec">
+          <img src="/images/rocket.svg" alt="rocket" class="rocket" />
+          <h2>Keep in touch</h2>
+          <ul class="contact__lists mt-s-sec">
+            <li>
+              <p>Github</p>
+              <a class="link" href="#">github.com/atom</a>
+            </li>
+            <li class="mt-1">
+              <p>Twitter</p>
+              <a class="link" href="#">@AtomEditor</a>
+            </li>
+            <li class="mt-1">
+              <p>Chat</p>
+              <a class="link" href="#">Slack</a>
+            </li>
+            <li class="mt-1">
+              <p>Forum</p>
+              <a class="link" href="#">Discuss</a>
+            </li>
+            <li class="mt-1">
+              <p>Stuff</p>
+              <a class="link" href="#">Atom Gear</a>
+            </li>
+            <li class="mt-1">
+              <p>RSS Feed</p>
+              <a class="link" href="#">Packages & Themes</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
     <!-- FOOTER -->
     <footer class="footer section"></footer>
   </body>
