Finish Atom site at second time

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <img src="/images/atom-blue.svg" alt="atom blue" />
           </div>
         </div>
-        <div class="hero__main mt-s-sec">
+        <div class="hero__main">
           <ul class="hero__version">
             <li class="px-2 py-3"><img src="/images/atom.svg" alt="atom" /></li>
             <li class="hero__note hero__note--release p-2">
@@ -310,7 +310,7 @@
     <!-- CONTACT -->
     <section class="contact section">
       <div class="container contact__container">
-        <div class="contact__github mt-l-sec">
+        <div class="contact__github">
           <h2>Open source</h2>
           <p class="mt-s-sec">
             Atom is open source. Be part of the Atom community or help improve
@@ -320,7 +320,7 @@
             <a href="#" class="btn btn-primary">Fork on Github</a>
           </div>
         </div>
-        <div class="contact__sns my-s-sec">
+        <div class="contact__sns">
           <img src="/images/rocket.svg" alt="rocket" class="rocket" />
           <h2>Keep in touch</h2>
           <ul class="contact__lists mt-s-sec">
@@ -352,7 +352,22 @@
         </div>
       </div>
     </section>
+
     <!-- FOOTER -->
-    <footer class="footer section"></footer>
+    <footer class="footer section py-3">
+      <div class="container footer__container">
+        <ul class="footer__navbar">
+          <li class="mx-1"><a href="#">Terms of Use</a></li>
+          <li class="mx-1"><a href="#">Privacy</a></li>
+          <li class="mx-1"><a href="#">Code of Conduct</a></li>
+          <li class="mx-1"><a href="#">Releases</a></li>
+          <li class="mx-1"><a href="#">FAQ</a></li>
+          <li class="mx-1"><a href="#">Contact</a></li>
+        </ul>
+        <div class="footer__sponsor">
+          <p>< > with ♥︎ by <span>Github</span></p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
