Change image path in html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ul>
         <div class="header__sign-in">
           <a href="#">
-            <img class="mx-1" src="/images/sign-in.png" alt="sign in" />
+            <img class="mx-1" src="./images/sign-in.png" alt="sign in" />
             Sign in
           </a>
         </div>
@@ -32,26 +32,28 @@
     <section class="hero section">
       <div class="container container-grid hero__container">
         <div class="hero__header mt-l-sec">
-          <img src="/images/logo.png" alt="logo" class="logo" />
+          <img src="./images/logo.png" alt="logo" class="logo" />
           <div class="atom-circles">
-            <img src="/images/atom-circles/atom-1.svg" alt="atom-1" />
-            <img src="/images/atom-circles/atom-2.svg" alt="atom-2" />
-            <img src="/images/atom-circles/atom-3.svg" alt="atom-3" />
-            <img src="/images/atom-circles/atom-4.svg" alt="atom-4" />
-            <img src="/images/atom-circles/atom-5.svg" alt="atom-5" />
-            <img src="/images/atom-circles/atom-6.svg" alt="atom-6" />
-            <img src="/images/atom-circles/atom-7.svg" alt="atom-7" />
-            <img src="/images/atom-circles/atom-8.svg" alt="atom-8" />
-            <img src="/images/atom-circles/atom-9.svg" alt="atom-9" />
-            <img src="/images/atom-circles/atom-10.svg" alt="atom-10" />
+            <img src="./images/atom-circles/atom-1.svg" alt="atom-1" />
+            <img src="./images/atom-circles/atom-2.svg" alt="atom-2" />
+            <img src="./images/atom-circles/atom-3.svg" alt="atom-3" />
+            <img src="./images/atom-circles/atom-4.svg" alt="atom-4" />
+            <img src="./images/atom-circles/atom-5.svg" alt="atom-5" />
+            <img src="./images/atom-circles/atom-6.svg" alt="atom-6" />
+            <img src="./images/atom-circles/atom-7.svg" alt="atom-7" />
+            <img src="./images/atom-circles/atom-8.svg" alt="atom-8" />
+            <img src="./images/atom-circles/atom-9.svg" alt="atom-9" />
+            <img src="./images/atom-circles/atom-10.svg" alt="atom-10" />
           </div>
           <div class="atom-blue">
-            <img src="/images/atom-blue.svg" alt="atom blue" />
+            <img src="./images/atom-blue.svg" alt="atom blue" />
           </div>
         </div>
         <div class="hero__main">
           <ul class="hero__version">
-            <li class="px-2 py-3"><img src="/images/atom.svg" alt="atom" /></li>
+            <li class="px-2 py-3">
+              <img src="./images/atom.svg" alt="atom" />
+            </li>
             <li class="hero__note hero__note--release p-2">
               <h3>1.56.0</h3>
               <a href="#" class="mt-1">Release notes</a>
@@ -62,7 +64,7 @@
             </li>
             <li class="download p-2">
               <a class="p-3" href="#">
-                <img class="mr-1" src="/images/download.png" alt="download" />
+                <img class="mr-1" src="./images/download.png" alt="download" />
                 DownLoad
               </a>
             </li>
@@ -89,7 +91,7 @@
         </div>
 
         <div class="main__content main__content--left my-l-sec">
-          <img src="/images/rainbow.svg" alt="rainbow" class="rainbow" />
+          <img src="./images/rainbow.svg" alt="rainbow" class="rainbow" />
 
           <h2 class="main__title">Teletype for Atom</h2>
           <p class="main__first-paragraph">
@@ -100,7 +102,7 @@
           </p>
           <div class="main__example main__example--left">
             <img
-              src="/images/content-1.png"
+              src="./images/content-1.png"
               alt="content 1"
               class="main__example"
             />
@@ -118,7 +120,7 @@
 
         <div class="main__content main__content--right my-l-sec">
           <img
-            src="/images/atom-orange.svg"
+            src="./images/atom-orange.svg"
             alt="orange atom"
             class="atom-orange"
           />
@@ -131,7 +133,7 @@
           </p>
           <div class="main__example main__example--right">
             <img
-              src="/images/content-2.png"
+              src="./images/content-2.png"
               alt="content 2"
               class="main__example"
             />
@@ -153,7 +155,7 @@
             <li>
               <div class="main__icon p-1">
                 <img
-                  src="/images/features/cross-platform.png"
+                  src="./images/features/cross-platform.png"
                   alt="cross platform"
                 />
               </div>
@@ -168,7 +170,7 @@
             <li>
               <div class="main__icon p-1">
                 <img
-                  src="/images/features/build-in.png"
+                  src="./images/features/build-in.png"
                   alt="Built-in package manager"
                 />
               </div>
@@ -183,7 +185,7 @@
             <li>
               <div class="main__icon p-1">
                 <img
-                  src="/images/features/smart.png"
+                  src="./images/features/smart.png"
                   alt="Smart autocompletion"
                 />
               </div>
@@ -198,7 +200,7 @@
             <li>
               <div class="main__icon p-1">
                 <img
-                  src="/images/features/file-system.png"
+                  src="./images/features/file-system.png"
                   alt="File system browser"
                 />
               </div>
@@ -212,7 +214,10 @@
             </li>
             <li>
               <div class="main__icon p-1">
-                <img src="/images/features/multiple.png" alt="Multiple panes" />
+                <img
+                  src="./images/features/multiple.png"
+                  alt="Multiple panes"
+                />
               </div>
               <div class="main__explanation pl-3 pt-1">
                 <h4>Multiple panes</h4>
@@ -224,7 +229,7 @@
             </li>
             <li>
               <div class="main__icon p-1">
-                <img src="/images/features/find.png" alt="Find and replace" />
+                <img src="./images/features/find.png" alt="Find and replace" />
               </div>
               <div class="main__explanation pl-3 pt-1">
                 <h4>Find and replace</h4>
@@ -242,7 +247,7 @@
           <ul class="main__lists mt-s-sec">
             <li>
               <div class="main__icon p-1">
-                <img src="/images/features/build-in.png" alt="Packages" />
+                <img src="./images/features/build-in.png" alt="Packages" />
               </div>
               <div class="main__explanation pl-3 pt-1">
                 <h4>Packages</h4>
@@ -256,7 +261,7 @@
             </li>
             <li>
               <div class="main__icon p-1">
-                <img src="/images/features/theme.png" alt="Themes" />
+                <img src="./images/features/theme.png" alt="Themes" />
               </div>
               <div class="main__explanation pl-3 pt-1">
                 <h4>Themes</h4>
@@ -272,7 +277,7 @@
             <li>
               <div class="main__icon p-1">
                 <img
-                  src="/images/features/customization.png"
+                  src="./images/features/customization.png"
                   alt="Customization"
                 />
               </div>
@@ -289,7 +294,7 @@
             <li>
               <div class="main__icon p-1">
                 <img
-                  src="/images/features/under-the-hood.png"
+                  src="./images/features/under-the-hood.png"
                   alt="Under the hood"
                 />
               </div>
@@ -321,7 +326,7 @@
           </div>
         </div>
         <div class="contact__sns">
-          <img src="/images/rocket.svg" alt="rocket" class="rocket" />
+          <img src="./images/rocket.svg" alt="rocket" class="rocket" />
           <h2>Keep in touch</h2>
           <ul class="contact__lists mt-s-sec">
             <li>
